[package]
name = "crlox"
version = "0.1.0"
edition = "2018"
authors = ["Coleton O'Donnell contact@coleton.io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
substring = "1.4.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# Cross Compile for Windows. I found that this wasn't fully working so I just compiled using:
# RUSTFLAGS="-L /usr/lib" cargo build --release --target x86_64-pc-windows-gnu
# And that worked great 
[target.x86_64-pc-windows-gnu]
rustc-link-search = ["/usr/lib"]